[package]
name = "road47"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
env_logger = "0.9.0"
log = "0.4.14"
rand = "0.8.5"
float-ord = "0.3.2"
reqwest = { version = "0.11", features = ["json"] }
mobc = "0.7"
async-trait = "0.1.77"
tokio-retry = "0.3"
tower-service = "0.3.2"
futures-util = "0.3.30"
futures = "0.3.30"
twox-hash = "1.6.0"
